src/objects/QPMS__Observation__c.object
<CustomObject>
    <description>This is Observation object</description>
    <fields>
        <fullName>QPMS__Age__c</fullName>
        <description>To caluclate age of observation</description>
        <formula>TEXT( TODAY() - DATEVALUE( CreatedDate ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to check approval</description>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Status__c</fullName>
        <description>to save status of approval</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To hold approver value</description>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Observations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To hold approver value</description>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Observations4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To hold approver value</description>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Observations5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To hold approver value</description>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Observations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Junction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>to get the audit junction data</description>
        <label>Audit Junction</label>
        <referenceTo>QPMS__Audit_Junction__c</referenceTo>
        <relationshipLabel>Observations</relationshipLabel>
        <relationshipName>Observations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>to get the all audit details here</description>
        <label>Audit</label>
        <referenceTo>QPMS__Audit__c</referenceTo>
        <relationshipLabel>Observations</relationshipLabel>
        <relationshipName>Observations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__CAPA_Number__c</fullName>
        <description>To save created capa number</description>
        <label>CAPA Number</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__CAPA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To save capa reference value</description>
        <label>CAPA</label>
        <referenceTo>QPMS__CAPA__c</referenceTo>
        <relationshipLabel>Observations</relationshipLabel>
        <relationshipName>Observations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__ChangeFieldApprovalStatus__c</fullName>
        <description>Flag to check approval status</description>
        <label>ChangeFieldApprovalStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Checklist_Name__c</fullName>
        <description>Display the CheckList Name In Audit trail</description>
        <formula>QPMS__Checklist__r.QPMS__Title__c</formula>
        <label>Checklist Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To save audit checklist value for observation</description>
        <inlineHelpText>To save audit checklist value for observation</inlineHelpText>
        <label>Checklist</label>
        <referenceTo>QPMS__Checklist__c</referenceTo>
        <relationshipLabel>Observations</relationshipLabel>
        <relationshipName>Observations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Completed_By_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>save the name of recommendation completed by</description>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Observations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Completed_Date__c</fullName>
        <description>recommendation completed date</description>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Completed__c</fullName>
        <description>To check the recomandation is completed or not</description>
        <label>Completed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Completion_Comments__c</fullName>
        <description>recomendation completion comments</description>
        <label>Completion Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Description__c</fullName>
        <description>To store the Observation Description.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Due_Date__c</fullName>
        <description>to store the due date data</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Security__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Security</description>
        <inlineHelpText>Enable Security</inlineHelpText>
        <label>Enable Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Escalation_Rule_for_Approval__c</fullName>
        <defaultValue>&apos;NONE&apos;</defaultValue>
        <description>Approval escalation for tasks</description>
        <label>Escalation Rule for Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NONE</fullName>
                    <default>true</default>
                    <label>NONE</label>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Escalation_Rule_for_Task__c</fullName>
        <defaultValue>&apos;NONE&apos;</defaultValue>
        <description>Used to choose the Rule Escalation for Task</description>
        <label>Escalation Rule for Task</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NONE</fullName>
                    <default>true</default>
                    <label>NONE</label>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Finding__c</fullName>
        <description>to hold findings category</description>
        <label>Finding Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Management - Goal Setting &amp; Progress Reviews</fullName>
                </value>
                <value>
                    <fullName>Management - Governance &amp;/or Commitment</fullName>
                </value>
                <value>
                    <fullName>Management - Staff Training &amp; Development</fullName>
                </value>
                <value>
                    <fullName>Management - Operational Control</fullName>
                </value>
                <value>
                    <fullName>Management - Project / Program Management</fullName>
                </value>
                <value>
                    <fullName>Management - Resourcing &amp; Support</fullName>
                </value>
                <value>
                    <fullName>Management - Risk Management</fullName>
                </value>
                <value>
                    <fullName>Info Mgmt - Action Item Management</fullName>
                </value>
                <value>
                    <fullName>Info Mgmt - Content Accuracy &amp; Completeness</fullName>
                </value>
                <value>
                    <fullName>Info Mgmt - Data Privacy &amp; Security</fullName>
                </value>
                <value>
                    <fullName>Info Mgmt - Review &amp; Approval Practices</fullName>
                </value>
                <value>
                    <fullName>Info Mgmt - Storage &amp; Retrieval Practices</fullName>
                </value>
                <value>
                    <fullName>Communication / Collaboration - Intra Team</fullName>
                </value>
                <value>
                    <fullName>Communication / Collaboration - Cross Team</fullName>
                </value>
                <value>
                    <fullName>Communication / Collaboration - Cisco External</fullName>
                </value>
                <value>
                    <fullName>Process - Change Management</fullName>
                </value>
                <value>
                    <fullName>Process - Continual Improvement</fullName>
                </value>
                <value>
                    <fullName>Process - Use of Templates</fullName>
                </value>
                <value>
                    <fullName>Process - Use of Tools</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Followers__c</fullName>
        <description>Holds followers to this record</description>
        <inlineHelpText>Holds followers to this record</inlineHelpText>
        <label>Followers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NONE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Full_Description__c</fullName>
        <description>To save full description</description>
        <label>Full Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Immediate_Action_Taken__c</fullName>
        <description>To save Immediate Action Taken</description>
        <label>Immediate Action Taken</label>
        <length>8000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Include_In_Follow_up__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To store Include in Follow up flag</description>
        <label>Include In Follow up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Initial_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To hold initial submitter value</description>
        <label>Initial Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ObservationsJWAy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site_Security__c</fullName>
        <label>Initiating Site Security</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__New_Capa_Number__c</fullName>
        <description>To save newly created capa</description>
        <label>New Capa Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__New_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To cave newly changed owner</description>
        <label>New Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Observations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver_Change_Owner__c</fullName>
        <description>To save Note To Approver Change Owner</description>
        <label>Note To Approver Change Owner</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Observation_Number__c</fullName>
        <formula>HYPERLINK($Setup.QPMS__QC_settings__c.QPMS__URL__c+&apos;/apex/Observation?Id=&apos;+Id,Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Observation Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Observation_Owner__c</fullName>
        <description>To display observation owner in details</description>
        <formula>Owner:User.LastName &amp;&quot; &quot;&amp; Owner:User.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Observation Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Observation_Type__c</fullName>
        <description>To Store the picklist vales of Observation types</description>
        <label>Observation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Findings</fullName>
                </value>
                <value>
                    <fullName>Recommendation</fullName>
                </value>
                <value>
                    <fullName>Positive Confirmation</fullName>
                </value>
                <value>
                    <fullName>Positive Comment</fullName>
                </value>
                <value>
                    <fullName>Best Practice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Product_Impact__c</fullName>
        <description>To save product impact information</description>
        <label>Product Impact</label>
        <length>8000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Question__c</fullName>
        <description>to save question ids</description>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Repeat_Value__c</fullName>
        <description>to display repet value in details</description>
        <formula>IF(QPMS__Repeat__c==true, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Repeat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Repeat__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To store true or false values.</description>
        <label>Repeat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Resolution_CAPA_Comment__c</fullName>
        <description>To save Resolution CAPA Comment</description>
        <label>Resolution CAPA Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Resolution_Closed_Comment__c</fullName>
        <description>Field is used to comment the resolution code</description>
        <label>Resolution Closed Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Resolution_Code__c</fullName>
        <description>To save Resolution Code</description>
        <label>Resolution Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Addressed through CAPA</fullName>
                </value>
                <value>
                    <fullName>Findings Workflow</fullName>
                </value>
                <value>
                    <fullName>No Action Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Section_Name__c</fullName>
        <description>Display the Section Name In Observation Audit Trail</description>
        <formula>QPMS__Section__r.QPMS__Section_Name__c</formula>
        <label>Section Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to section</description>
        <label>Section</label>
        <referenceTo>QPMS__Section__c</referenceTo>
        <relationshipLabel>Observations</relationshipLabel>
        <relationshipName>Observations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Severity_Name__c</fullName>
        <description>used in audit observation section to show severity value instead of id</description>
        <formula>QPMS__Severity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>used in audit observation section to show severity value instead of id</inlineHelpText>
        <label>Severity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Severity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To Store severity values</description>
        <label>Severity</label>
        <referenceTo>QPMS__Risk_Severity__c</referenceTo>
        <relationshipLabel>Observations</relationshipLabel>
        <relationshipName>Observations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Signed_Off_Details__c</fullName>
        <description>Signed Off Details</description>
        <inlineHelpText>Signed Off Details</inlineHelpText>
        <label>Signed Off Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <description>To display status of observation</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>Findings Workflow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Supplier_Name__c</fullName>
        <formula>QPMS__Audit__r.QPMS__Supplier__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__SystemicValue__c</fullName>
        <description>To display Systemic value in details</description>
        <formula>IF(QPMS__Systemic__c==true, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Systemic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Systemic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to store the systemic data</description>
        <label>Systemic</label>
        <type>Checkbox</type>
    </fields>
    <label>Observation</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <columns>QPMS__Observation_Type__c</columns>
        <columns>NAME</columns>
        <columns>QPMS__Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OB-{00000}</displayFormat>
        <label>Observation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Observations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>